temp_geetest_info.txt
  File "E:\APIïżœïżœÈĄïżœïżœïżœïżœ\ïżœÔ¶ïżœïżœïżœïżœïżœïżœïżœŃŽïżœïżœïżœïżœïżœïżœïżœ\01-ïżœïżœïżœïżœVPNŚąïżœïżœïżœ\test\inspect_geetest.py", line 30
    info = page.evaluate("""() => {
                         ^^^^^^^^^^
SyntaxError: (unicode error) 'unicodeescape' codec can't decode bytes in position 982-983: truncated \uXXXX escape
